Cleaned Up files acroos modules